better reporting, fewer deopts